force-app/main/default/objects/AI_Call_Note__c/AI_Call_Note__c.object-meta.xml
<CustomObject>
    <label>AI Call Note</label>
    <pluralLabel>AI Call Notes</pluralLabel>
    <nameField>
        <label>Call Note Number</label>
        <displayFormat>ACN-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>