force-app/main/default/objects/AI_Call_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>AI_Call_Notes</relationshipName>
    <relationshipLabel>AI Call Notes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>