force-app/main/default/objects/AI_Call_Note__c/fields/Action_Items_JSON__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_JSON__c</fullName>
    <label>Action Items (JSON)</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>