force-app/main/default/objects/AI_Call_Note__c/fields/Agreed_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Next_Steps__c</fullName>
    <label>Agreed Next Steps</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>