force-app/main/default/objects/AI_Call_Note__c/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed__c</fullName>
    <label>Budget Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>