force-app/main/default/objects/AI_Call_Note__c/fields/Budget_Signals__c.field-meta.xml
<CustomField>
    <fullName>Budget_Signals__c</fullName>
    <label>Budget Signals</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>