force-app/main/default/objects/AI_Call_Note__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Text</type>
    <length>255</length>
</CustomField>