force-app/main/default/objects/AI_Call_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AI_Call_Notes</relationshipName>
    <relationshipLabel>AI Call Notes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>