force-app/main/default/objects/AI_Call_Note__c/fields/Current_Tools__c.field-meta.xml
<CustomField>
    <fullName>Current_Tools__c</fullName>
    <label>Current Tools</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>