force-app/main/default/objects/AI_Call_Note__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>