force-app/main/default/objects/AI_Call_Note__c/fields/Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story__c</fullName>
    <label>Customer Story</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>