force-app/main/default/objects/AI_Call_Note__c/fields/Deal_Momentum__c.field-meta.xml
<CustomField>
    <fullName>Deal_Momentum__c</fullName>
    <label>Deal Momentum</label>
    <type>Text</type>
    <length>255</length>
</CustomField>