force-app/main/default/objects/AI_Call_Note__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>