force-app/main/default/objects/AI_Call_Note__c/fields/Feature_Questions__c.field-meta.xml
<CustomField>
    <fullName>Feature_Questions__c</fullName>
    <label>Feature Questions</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>