force-app/main/default/objects/AI_Call_Note__c/fields/Implementation_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Onboarding__c</fullName>
    <label>Implementation / Onboarding</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>