force-app/main/default/objects/AI_Call_Note__c/fields/Inception_Or_Switcher__c.field-meta.xml
<CustomField>
    <fullName>Inception_Or_Switcher__c</fullName>
    <label>Inception Or Switcher</label>
    <type>Text</type>
    <length>255</length>
</CustomField>