force-app/main/default/objects/AI_Call_Note__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Text</type>
    <length>255</length>
</CustomField>