force-app/main/default/objects/AI_Call_Note__c/fields/Integration_Topics__c.field-meta.xml
<CustomField>
    <fullName>Integration_Topics__c</fullName>
    <label>Integration Topics</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>