force-app/main/default/objects/AI_Call_Note__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipName>AI_Call_Notes</relationshipName>
    <relationshipLabel>AI Call Notes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>