force-app/main/default/objects/AI_Call_Note__c/fields/Main_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Main_Challenges__c</fullName>
    <label>Main Challenges</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>