force-app/main/default/objects/AI_Call_Note__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <label>Meeting ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>