force-app/main/default/objects/AI_Call_Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AI_Call_Notes</relationshipName>
    <relationshipLabel>AI Call Notes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>