force-app/main/default/objects/AI_Call_Note__c/fields/Overall_Tone__c.field-meta.xml
<CustomField>
    <fullName>Overall_Tone__c</fullName>
    <label>Overall Tone</label>
    <type>Text</type>
    <length>255</length>
</CustomField>