force-app/main/default/objects/AI_Call_Note__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>