force-app/main/default/objects/AI_Call_Note__c/fields/Pricing_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Discussion__c</fullName>
    <label>Pricing Discussion</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>