force-app/main/default/objects/AI_Call_Note__c/fields/Product_Areas_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Product_Areas_Discussed__c</fullName>
    <label>Product Areas Discussed</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>