force-app/main/default/objects/AI_Call_Note__c/fields/Risks_Or_Objections__c.field-meta.xml
<CustomField>
    <fullName>Risks_Or_Objections__c</fullName>
    <label>Risks or Objections</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>