force-app/main/default/objects/AI_Call_Note__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholders</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>