force-app/main/default/objects/AI_Call_Note__c/fields/Timeline_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Confirmed__c</fullName>
    <label>Timeline Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>