force-app/main/default/objects/AI_Call_Note__c/fields/Timeline_Signals__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Signals__c</fullName>
    <label>Timeline Signals</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>