force-app/main/default/objects/AI_Call_Note__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <label>Topics Discussed</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>