force-app/main/default/objects/AI_Call_Note__c/fields/Transcript_Partial__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Partial__c</fullName>
    <label>Transcript Partial</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>