force-app/main/default/objects/AI_Call_Note__c/fields/Verbal_Commit__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Commit__c</fullName>
    <label>Verbal Commit</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>